--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@giphy/js-fetch-api": "^5.6.0",
     "@giphy/react-components": "^9.8.0",
     "@phosphor-icons/react": "^2.1.7",
+    "@reduxjs/toolkit": "^2.5.1",
     "emoji-mart": "^5.6.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.0"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^6.28.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
